_sass/parts/search.scss
.search-bar {
  position: relative;

  form {
    display: flex;
    flex-direction: column;
  }

  input {
    max-width: 100%;
    border: 1px solid var(--button-outline);
  }

  input[type=submit] {
    background-color: transparent;
    border-color: transparent;
    width: fit-content;
    position: absolute;
    top: 1.6em;
    left: 86%;
    cursor: pointer;
  }
}

#search-results {
  list-style: square;
}

